--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>React Tutorials</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
+
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/index.css" type="text/css" rel="stylesheet"/>
   </head>
 
   <body>
-    <div id="app"></div>
-    <script src="client.min.js"></script>
+      <div id="root"></div>
+      <script src="bundle.min.js"></script>
   </body>
 </html>
